# syslog_w

./: .env_sample  Cargo.toml  lib_install.sh  readme.md  target.yml
.github/workflows/: build.yml
src/: main.rs
src/config/: env.rs  mod.rs  target.rs
src/interfaces/: mod.rs  ndis.rs
src/jornalctl/: mod.rs  watch.rs
src/service/: journal_analyzer.rs  mod.rs  notify_service.rs
stub/: run_test_echo.sh  test_echo.service  test_echo.sh
systemd/: syslogw.service
