[package]
name = "syslog_w"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
flexi_logger = "0.31.7"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
systemd = "0.10.1"
tokio = { version = "1.48.0", features = ["full"] }
ureq = { version = "3.1.4", features = ["json"] }
